<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/estilo">

        <Preference
            android:summary="@string/escolha_um_tema"
            app:key="@string/themeStatus"
            app:title="@string/trocar_tema" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/preferencias">

        <SwitchPreferenceCompat
            app:key="@string/epilogoIsValide"
            app:summaryOff="@string/content_epilogo_off"
            app:summaryOn="@string/content_epilogo_on"
            app:title="@string/epilogo" />

        <Preference
            app:key="@string/editHistoric"
            app:title="@string/editar_historico" />

    </PreferenceCategory>


</PreferenceScreen>