<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <EditText
        android:id="@+id/activity_input_et_level_current"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/tier_atual"
        android:inputType="number"
        android:autofillHints="number" />

    <EditText
        android:id="@+id/activity_input_et_exp_missing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/exp_para_completar"
        android:inputType="number"
        android:autofillHints="number" />

    <EditText
        android:id="@+id/activity_input_et_initial_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:inputType="date"
        android:hint="@string/data_inicial"
        android:autofillHints="number" />

    <Button
        android:id="@+id/activity_input_bt_salvar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/salvar" />

</LinearLayout>