<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.Propriedades.TimelineFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/valorant"
            android:hint="@string/linha_do_tempo"
            android:paddingTop="14dp"
            android:textColorHint="?attr/colorSecondary"
            android:textSize="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/muli_font_family"
                android:hint="@string/data_inicial_do_ato"
                android:paddingTop="8dp"
                android:paddingRight="5dp"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/data_inicial_do_ato"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/impact_font_family"
                android:paddingTop="8dp"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/muli_font_family"
                android:hint="@string/data_finalizacao"
                android:paddingTop="8dp"
                android:paddingRight="5dp"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/data_finalizacao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/impact_font_family"
                android:paddingTop="8dp"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/muli_font_family"
                android:hint="@string/data_final_do_ato"
                android:paddingTop="8dp"
                android:paddingRight="5dp"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/data_final_do_ato"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/impact_font_family"
                android:paddingTop="8dp"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tag_dias_adiantados_atrasados"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/muli_font_family"
                android:hint="@string/dias_adiantados_atrasados"
                android:paddingTop="8dp"
                android:paddingRight="5dp"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/dias_adiantados_atrasados"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/impact_font_family"
                android:paddingTop="8dp"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="20dp" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>