<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <br.com.samuelnunes.valorantpassbattle.ui.view.viewsCustom.CardModule
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/confirmacao">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/mensage_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/muli_font_family"
                android:gravity="center"
                android:paddingHorizontal="24dp"
                android:paddingBottom="8dp"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Deseja realizar algo?" />


            <Button
                android:id="@+id/btn_cancel"
                style="@style/mButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginBottom="8dp"
                android:backgroundTint="?attr/colorPrimaryVariant"
                android:text="@string/cancelar"
                android:textColor="@color/text_light"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btn_save"
                app:layout_constraintTop_toBottomOf="@+id/mensage_content" />


            <Button
                android:id="@+id/btn_save"
                style="@style/mButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginBottom="8dp"
                android:backgroundTint="?attr/colorSecondaryVariant"
                android:colorButtonNormal="@drawable/btn_save"
                android:text="@string/deletar"
                android:textColor="@color/text_light"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/mensage_content"
                app:layout_constraintTop_toBottomOf="@+id/mensage_content" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </br.com.samuelnunes.valorantpassbattle.ui.view.viewsCustom.CardModule>

</layout>