<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorPrimary"
    android:orientation="vertical"
    android:padding="14dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/muli_font_family"
            android:hint="@string/exp_inicial"
            android:paddingTop="8dp"
            android:paddingRight="5dp"
            android:textColorHint="?attr/colorSecondary"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/tv_exp_initial_tier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/impact_font_family"
            android:paddingTop="8dp"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/muli_font_family"
            android:hint="@string/exp_para_completar_"
            android:paddingTop="8dp"
            android:paddingRight="5dp"
            android:textColorHint="?attr/colorSecondary"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/tv_exp_missing_tier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/impact_font_family"
            android:paddingTop="8dp"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/muli_font_family"
            android:hint="@string/porcentagem_do_passe"
            android:paddingTop="8dp"
            android:paddingRight="5dp"
            android:textColorHint="?attr/colorSecondary"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/tv_total_percentage_tier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/impact_font_family"
            android:paddingTop="8dp"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/muli_font_family"
            android:hint="@string/recompensa"
            android:paddingTop="8dp"
            android:paddingRight="5dp"
            android:textColorHint="?attr/colorSecondary"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/tv_reward_tier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/impact_font_family"
            android:paddingTop="8dp"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="20dp" />
    </LinearLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/dialogViewPagerMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
        android:id="@+id/indicator_image_slider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingTop="8dp"
        app:dotsColor="?attr/colorPrimarySurface"
        app:dotsCornerRadius="8dp"
        app:dotsSize="16dp"
        app:dotsSpacing="4dp"
        app:dotsWidthFactor="2.5"
        app:progressMode="false"
        app:selectedDotColor="?attr/colorSecondary" />

</LinearLayout>