<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="24dp"
        android:paddingBottom="14dp">

        <TextView
            android:id="@+id/total_de_xp_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/muli_font_family"
            android:hint="@string/total_de_xp"
            android:textColorHint="?attr/colorOnSecondary"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/total_de_xp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/impact_font_family"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/total_de_xp_hint"
            app:layout_constraintStart_toEndOf="@+id/total_de_xp_hint"
            app:layout_constraintTop_toTopOf="@+id/total_de_xp_hint"
            tools:text="122000 EXP" />

        <TextView
            android:id="@+id/progress_porcent_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/muli_font_family"
            android:hint="@string/progresso_porcento"
            android:textColorHint="?attr/colorOnSecondary"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/total_de_xp_hint" />

        <TextView
            android:id="@+id/progress_porcent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/impact_font_family"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/progress_porcent_hint"
            app:layout_constraintStart_toEndOf="@+id/progress_porcent_hint"
            app:layout_constraintTop_toTopOf="@+id/progress_porcent_hint"
            tools:text="10.43%" />

        <TextView
            android:id="@+id/xp_p_dia_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/muli_font_family"
            android:hint="@string/xp_por_dia"
            android:textColorHint="?attr/colorOnSecondary"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progress_porcent_hint" />

        <TextView
            android:id="@+id/xp_p_dia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/impact_font_family"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/xp_p_dia_hint"
            app:layout_constraintStart_toEndOf="@+id/xp_p_dia_hint"
            app:layout_constraintTop_toTopOf="@+id/xp_p_dia_hint"
            tools:text="40667 EXP" />

        <TextView
            android:id="@+id/exp_adiant_atrasado_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/muli_font_family"
            android:hint="@string/exp_adiantado_atrasado"
            android:textColorHint="?attr/colorOnSecondary"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/xp_p_dia_hint" />

        <TextView
            android:id="@+id/exp_adiant_atrasado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/impact_font_family"
            android:textColor="?attr/colorAccent"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/exp_adiant_atrasado_hint"
            app:layout_constraintStart_toEndOf="@+id/exp_adiant_atrasado_hint"
            app:layout_constraintTop_toTopOf="@+id/exp_adiant_atrasado_hint"
            tools:text="59122 EXP" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>